Assets/Grammar/CfdgParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Cfdg.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class CfdgParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, STARTSHAPE=8, 
		BACKGROUND=9, RULE=10, ROTATE=11, FLIP=12, HUE=13, SATURATION=14, BRIGHTNESS=15, 
		ALPHA=16, XSHIFT=17, YSHIFT=18, ZSHIFT=19, SIZE=20, SKEW=21, NUMBER=22, 
		NAME=23, WS=24, COMMENT=25, LINE_COMMENT=26, LINE_BANG_COMMENT=27;
	public const int
		RULE_contextfree = 0, RULE_statements = 1, RULE_statement = 2, RULE_startshape = 3, 
		RULE_background = 4, RULE_design_rule = 5, RULE_replacements = 6, RULE_replacement_loop = 7, 
		RULE_replacement = 8, RULE_modification = 9, RULE_adjustments = 10, RULE_adjustment = 11, 
		RULE_color_adjustments = 12, RULE_geom_adjustment = 13, RULE_color_adjustment = 14, 
		RULE_num = 15;
	public static readonly string[] ruleNames = {
		"contextfree", "statements", "statement", "startshape", "background", 
		"design_rule", "replacements", "replacement_loop", "replacement", "modification", 
		"adjustments", "adjustment", "color_adjustments", "geom_adjustment", "color_adjustment", 
		"num"
	};

	private static readonly string[] _LiteralNames = {
		null, "'{'", "'}'", "'*'", "'['", "']'", "'-'", "'+'", "'startshape'", 
		"'background'", "'rule'", null, null, null, null, null, null, "'x'", "'y'", 
		"'z'", null, "'skew'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, "STARTSHAPE", "BACKGROUND", 
		"RULE", "ROTATE", "FLIP", "HUE", "SATURATION", "BRIGHTNESS", "ALPHA", 
		"XSHIFT", "YSHIFT", "ZSHIFT", "SIZE", "SKEW", "NUMBER", "NAME", "WS", 
		"COMMENT", "LINE_COMMENT", "LINE_BANG_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Cfdg.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static CfdgParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CfdgParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CfdgParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ContextfreeContext : ParserRuleContext {
		public StatementsContext statements() {
			return GetRuleContext<StatementsContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(CfdgParser.Eof, 0); }
		public ContextfreeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_contextfree; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.EnterContextfree(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.ExitContextfree(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICfdgVisitor<TResult> typedVisitor = visitor as ICfdgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitContextfree(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ContextfreeContext contextfree() {
		ContextfreeContext _localctx = new ContextfreeContext(Context, State);
		EnterRule(_localctx, 0, RULE_contextfree);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 32; statements(0);
			State = 33; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementsContext : ParserRuleContext {
		public StatementsContext statements() {
			return GetRuleContext<StatementsContext>(0);
		}
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statements; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.EnterStatements(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.ExitStatements(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICfdgVisitor<TResult> typedVisitor = visitor as ICfdgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatements(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementsContext statements() {
		return statements(0);
	}

	private StatementsContext statements(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		StatementsContext _localctx = new StatementsContext(Context, _parentState);
		StatementsContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_statements, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			}
			Context.Stop = TokenStream.LT(-1);
			State = 40;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new StatementsContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_statements);
					State = 36;
					if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
					State = 37; statement();
					}
					} 
				}
				State = 42;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public StartshapeContext startshape() {
			return GetRuleContext<StartshapeContext>(0);
		}
		public BackgroundContext background() {
			return GetRuleContext<BackgroundContext>(0);
		}
		public Design_ruleContext design_rule() {
			return GetRuleContext<Design_ruleContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICfdgVisitor<TResult> typedVisitor = visitor as ICfdgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			State = 46;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case STARTSHAPE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 43; startshape();
				}
				break;
			case BACKGROUND:
				EnterOuterAlt(_localctx, 2);
				{
				State = 44; background();
				}
				break;
			case RULE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 45; design_rule();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StartshapeContext : ParserRuleContext {
		public ITerminalNode STARTSHAPE() { return GetToken(CfdgParser.STARTSHAPE, 0); }
		public ITerminalNode NAME() { return GetToken(CfdgParser.NAME, 0); }
		public StartshapeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_startshape; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.EnterStartshape(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.ExitStartshape(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICfdgVisitor<TResult> typedVisitor = visitor as ICfdgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStartshape(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartshapeContext startshape() {
		StartshapeContext _localctx = new StartshapeContext(Context, State);
		EnterRule(_localctx, 6, RULE_startshape);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48; Match(STARTSHAPE);
			State = 49; Match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BackgroundContext : ParserRuleContext {
		public ITerminalNode BACKGROUND() { return GetToken(CfdgParser.BACKGROUND, 0); }
		public Color_adjustmentsContext color_adjustments() {
			return GetRuleContext<Color_adjustmentsContext>(0);
		}
		public BackgroundContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_background; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.EnterBackground(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.ExitBackground(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICfdgVisitor<TResult> typedVisitor = visitor as ICfdgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBackground(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BackgroundContext background() {
		BackgroundContext _localctx = new BackgroundContext(Context, State);
		EnterRule(_localctx, 8, RULE_background);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 51; Match(BACKGROUND);
			State = 52; Match(T__0);
			State = 53; color_adjustments(0);
			State = 54; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Design_ruleContext : ParserRuleContext {
		public ITerminalNode RULE() { return GetToken(CfdgParser.RULE, 0); }
		public ITerminalNode NAME() { return GetToken(CfdgParser.NAME, 0); }
		public ReplacementsContext replacements() {
			return GetRuleContext<ReplacementsContext>(0);
		}
		public NumContext num() {
			return GetRuleContext<NumContext>(0);
		}
		public Design_ruleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_design_rule; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.EnterDesign_rule(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.ExitDesign_rule(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICfdgVisitor<TResult> typedVisitor = visitor as ICfdgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDesign_rule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Design_ruleContext design_rule() {
		Design_ruleContext _localctx = new Design_ruleContext(Context, State);
		EnterRule(_localctx, 10, RULE_design_rule);
		try {
			State = 69;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 56; Match(RULE);
				State = 57; Match(NAME);
				State = 58; Match(T__0);
				State = 59; replacements();
				State = 60; Match(T__1);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 62; Match(RULE);
				State = 63; Match(NAME);
				State = 64; num();
				State = 65; Match(T__0);
				State = 66; replacements();
				State = 67; Match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReplacementsContext : ParserRuleContext {
		public Replacement_loopContext[] replacement_loop() {
			return GetRuleContexts<Replacement_loopContext>();
		}
		public Replacement_loopContext replacement_loop(int i) {
			return GetRuleContext<Replacement_loopContext>(i);
		}
		public ReplacementsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_replacements; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.EnterReplacements(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.ExitReplacements(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICfdgVisitor<TResult> typedVisitor = visitor as ICfdgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReplacements(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReplacementsContext replacements() {
		ReplacementsContext _localctx = new ReplacementsContext(Context, State);
		EnterRule(_localctx, 12, RULE_replacements);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==NUMBER || _la==NAME) {
				{
				{
				State = 71; replacement_loop();
				}
				}
				State = 76;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Replacement_loopContext : ParserRuleContext {
		public ReplacementContext replacement() {
			return GetRuleContext<ReplacementContext>(0);
		}
		public ITerminalNode NUMBER() { return GetToken(CfdgParser.NUMBER, 0); }
		public ModificationContext modification() {
			return GetRuleContext<ModificationContext>(0);
		}
		public ReplacementsContext replacements() {
			return GetRuleContext<ReplacementsContext>(0);
		}
		public Replacement_loopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_replacement_loop; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.EnterReplacement_loop(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.ExitReplacement_loop(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICfdgVisitor<TResult> typedVisitor = visitor as ICfdgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReplacement_loop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Replacement_loopContext replacement_loop() {
		Replacement_loopContext _localctx = new Replacement_loopContext(Context, State);
		EnterRule(_localctx, 14, RULE_replacement_loop);
		try {
			State = 90;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 77; replacement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 78; Match(NUMBER);
				State = 79; Match(T__2);
				State = 80; modification();
				State = 81; replacement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 83; Match(NUMBER);
				State = 84; Match(T__2);
				State = 85; modification();
				State = 86; Match(T__0);
				State = 87; replacements();
				State = 88; Match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReplacementContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(CfdgParser.NAME, 0); }
		public ModificationContext modification() {
			return GetRuleContext<ModificationContext>(0);
		}
		public ReplacementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_replacement; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.EnterReplacement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.ExitReplacement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICfdgVisitor<TResult> typedVisitor = visitor as ICfdgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReplacement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReplacementContext replacement() {
		ReplacementContext _localctx = new ReplacementContext(Context, State);
		EnterRule(_localctx, 16, RULE_replacement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92; Match(NAME);
			State = 93; modification();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModificationContext : ParserRuleContext {
		public AdjustmentsContext adjustments() {
			return GetRuleContext<AdjustmentsContext>(0);
		}
		public ModificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_modification; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.EnterModification(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.ExitModification(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICfdgVisitor<TResult> typedVisitor = visitor as ICfdgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModificationContext modification() {
		ModificationContext _localctx = new ModificationContext(Context, State);
		EnterRule(_localctx, 18, RULE_modification);
		try {
			State = 103;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				EnterOuterAlt(_localctx, 1);
				{
				State = 95; Match(T__0);
				State = 96; adjustments();
				State = 97; Match(T__1);
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 2);
				{
				State = 99; Match(T__3);
				State = 100; adjustments();
				State = 101; Match(T__4);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AdjustmentsContext : ParserRuleContext {
		public AdjustmentContext[] adjustment() {
			return GetRuleContexts<AdjustmentContext>();
		}
		public AdjustmentContext adjustment(int i) {
			return GetRuleContext<AdjustmentContext>(i);
		}
		public AdjustmentsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_adjustments; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.EnterAdjustments(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.ExitAdjustments(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICfdgVisitor<TResult> typedVisitor = visitor as ICfdgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAdjustments(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AdjustmentsContext adjustments() {
		AdjustmentsContext _localctx = new AdjustmentsContext(Context, State);
		EnterRule(_localctx, 20, RULE_adjustments);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ROTATE) | (1L << FLIP) | (1L << HUE) | (1L << SATURATION) | (1L << BRIGHTNESS) | (1L << ALPHA) | (1L << XSHIFT) | (1L << YSHIFT) | (1L << ZSHIFT) | (1L << SIZE) | (1L << SKEW))) != 0)) {
				{
				{
				State = 105; adjustment();
				}
				}
				State = 110;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AdjustmentContext : ParserRuleContext {
		public Geom_adjustmentContext geom_adjustment() {
			return GetRuleContext<Geom_adjustmentContext>(0);
		}
		public Color_adjustmentContext color_adjustment() {
			return GetRuleContext<Color_adjustmentContext>(0);
		}
		public AdjustmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_adjustment; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.EnterAdjustment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.ExitAdjustment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICfdgVisitor<TResult> typedVisitor = visitor as ICfdgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAdjustment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AdjustmentContext adjustment() {
		AdjustmentContext _localctx = new AdjustmentContext(Context, State);
		EnterRule(_localctx, 22, RULE_adjustment);
		try {
			State = 113;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ROTATE:
			case FLIP:
			case XSHIFT:
			case YSHIFT:
			case ZSHIFT:
			case SIZE:
			case SKEW:
				EnterOuterAlt(_localctx, 1);
				{
				State = 111; geom_adjustment();
				}
				break;
			case HUE:
			case SATURATION:
			case BRIGHTNESS:
			case ALPHA:
				EnterOuterAlt(_localctx, 2);
				{
				State = 112; color_adjustment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Color_adjustmentsContext : ParserRuleContext {
		public Color_adjustmentsContext color_adjustments() {
			return GetRuleContext<Color_adjustmentsContext>(0);
		}
		public Color_adjustmentContext color_adjustment() {
			return GetRuleContext<Color_adjustmentContext>(0);
		}
		public Color_adjustmentsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_color_adjustments; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.EnterColor_adjustments(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfdgListener typedListener = listener as ICfdgListener;
			if (typedListener != null) typedListener.ExitColor_adjustments(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICfdgVisitor<TResult> typedVisitor = visitor as ICfdgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitColor_adjustments(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Color_adjustmentsContext color_adjustments() {
		return color_adjustments(0);
	}

	private Color_adjustmentsContext color_adjustments(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Color_adjustmentsContext _localctx = new Color_adjustmentsContext(Context, _parentState);
		Color_adjustmentsContext _prevctx = _localctx;
		int _startState = 24;
		EnterRecursionRule(_localctx, 24, RULE_color_adjustments, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			}
			Context.Stop = TokenStream.LT(-1);
			State = 120;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Color_adjustmentsContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_color_adjustments);
					State = 116;
					if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
					State = 117; color_adjustment();
					}
					} 
				}
				State = 122;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
